--- a/app/index-de.html
+++ b/app/index-de.html
@@ -24,19 +24,42 @@
 
 
         <div class="container">
-        <div class="pattern large"></div>
-        <div class="pattern small"></div>
-            <div id="header"></div>
-            
-            <div id="content-frame-top"></div>
-            <div id="article">
-            <img src="http://placekitten.com/200/300" />
-            <p>David创办之Resource Academy为国际教练联盟认证的教练学院， 自2002年以来已培训了上百名专业教练及超过50名于全球各国工作之导师。 </p><p>David亦协助创立过其他培训机构如Wilson Learning 及Excel and Turning Point。</p>
-            <p>David 身为企业资深领导与个人发展导师已超过35年的时间，并创造了一间已成功屹立27年之久的培训顾问公司。 这些丰富的经验令他的培训能独一无二拥有着许多实际亲身经验，因为David致力於以实用技术，资源与知识来针对现实社会里所面临的问题。 David亦是Resource Realization培训顾问公司的创办人与拥有者，服务的客户遍布於亚洲，日本， 欧洲与美国，是一个深受国际肯定的导师与顾问。曾经指导与规划的课程范围包含企业管理，销售，领导力， 客户服务及其他个人发展相关领域。David持续结合当今最新，最优的管理与培训哲学来规划课程资料，以协助个人与企业都能及发挥最大潜能。
-            </p>
+            <div class="header">
+                <ul class="nav nav-pills pull-right">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <h3 class="text-muted">bpts</h3>
             </div>
-            <div id="content-frame-bottom"></div>
-            <div id="footer"></div>
+
+            <div class="jumbotron">
+                <h1>'Allo, 'Allo!</h1>
+                <p class="lead">Always a pleasure scaffolding your apps.</p>
+                <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
+            </div>
+
+            <div class="row marketing">
+                <div class="col-lg-6">
+                    <h4>HTML5 Boilerplate</h4>
+                    <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
+
+                    <h4>Bootstrap</h4>
+                    <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
+
+                    <h4>Modernizr</h4>
+                    <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
+
+
+                    <h4>RequireJS</h4>
+                    <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
+
+                </div>
+            </div>
+
+            <div class="footer">
+                <p>♥ from the Yeoman team</p>
+            </div>
 
         </div>
 
@@ -59,10 +82,6 @@
 
         <!-- build:js scripts/main.js -->
         <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
-        <!-- endbuild -->
-
-        <!-- build:js(.tmp) scripts/coffee.js -->
-        <script src="scripts/hello.js"></script>
         <!-- endbuild -->
 </body>
 </html>
