--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <link rel="shortcut icon" href="favicon.png">
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
+        <link href="styles/video-js.css" rel="stylesheet" type="text/css">
         <!-- endbuild -->
         <!-- build:js scripts/vendor/modernizr.js -->
         <script src="bower_components/modernizr/modernizr.js"></script>
@@ -30,9 +32,27 @@
             
             <div id="content-frame-top"></div>
             <div id="article">
-            <img src="http://placekitten.com/200/300" />
-            <p>David创办之Resource Academy为国际教练联盟认证的教练学院， 自2002年以来已培训了上百名专业教练及超过50名于全球各国工作之导师。 </p><p>David亦协助创立过其他培训机构如Wilson Learning 及Excel and Turning Point。</p>
-            <p>David 身为企业资深领导与个人发展导师已超过35年的时间，并创造了一间已成功屹立27年之久的培训顾问公司。 这些丰富的经验令他的培训能独一无二拥有着许多实际亲身经验，因为David致力於以实用技术，资源与知识来针对现实社会里所面临的问题。 David亦是Resource Realization培训顾问公司的创办人与拥有者，服务的客户遍布於亚洲，日本， 欧洲与美国，是一个深受国际肯定的导师与顾问。曾经指导与规划的课程范围包含企业管理，销售，领导力， 客户服务及其他个人发展相关领域。David持续结合当今最新，最优的管理与培训哲学来规划课程资料，以协助个人与企业都能及发挥最大潜能。
+            <h3>公司简介</h3>
+            <div id="video-wrap">
+            <video id="video" class="video-js vjs-default-skin" controls preload="none" width="480" height="320"
+              poster="../videos/poster.jpg"
+              data-setup="{}">
+              <source src="http://vjs.zencdn.net/v/oceans.mp4" type='video/mp4' />
+            </video>
+            </div>
+            <h4>助你凝商致富，令你经营有道，比富更贵<br/>
+MORE BUSINESS, MORE THAN BUSINESS</h4>
+
+<h4>服务对象</h4>
+<p>打算飞速壮大企业的企业领导人员</p>
+
+<h4>服务承诺</h4>
+<p>
+经营家旨在集合国内影响力非凡的企业家，承诺透过一系列的专业
+培训，从而建立庞大的商业人际网络，协助会员们打造一个又一个
+兼具财富实力和企业责任的优秀中国企业，使所有会员形成一个在
+国内外都拥有举足轻重地位的商圈，实现祖国、企业、员工、客户
+四赢的目标。
             </p>
             </div>
             <div id="content-frame-bottom"></div>
