--- a/app/contact.html
+++ b/app/contact.html
@@ -31,25 +31,22 @@
             <div id="header"></div>
             
             <div id="content-frame">
-            <div id="content-frame-top"></div>
-            <div id="article">
-            <h3>公司简介</h3>
-            <h4>助你凝商致富，令你经营有道，比富更贵<br/>
-MORE BUSINESS, MORE THAN BUSINESS</h4>
+                <div id="content-frame-top"></div>
+                <div id="article">
+                <div class="map-wrap">
+                    <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://ditu.google.cn/maps?f=q&amp;source=embed&amp;hl=zh-TW&amp;geocode=&amp;q=%E9%A6%99%E6%B8%AF%E7%9A%87%E5%90%8E%E5%A4%A7%E9%81%93%E6%9D%B1248%E8%99%9F&amp;aq=0&amp;oq=%E9%A6%99%E6%B8%AF&amp;sll=-34.394558,144.901654&amp;sspn=12.299242,23.269043&amp;t=m&amp;ie=UTF8&amp;hq=&amp;hnear=%E9%A6%99%E6%B8%AF%E7%9A%87%E5%90%8E%E5%A4%A7%E9%81%93%E6%9D%B1248%E8%99%9F&amp;ll=22.274619,114.173419&amp;spn=0.000869,0.00114&amp;z=19&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=zh-TW&amp;geocode=&amp;q=%E9%A6%99%E6%B8%AF%E7%9A%87%E5%90%8E%E5%A4%A7%E9%81%93%E6%9D%B1248%E8%99%9F&amp;aq=0&amp;oq=%E9%A6%99%E6%B8%AF&amp;sll=-34.394558,144.901654&amp;sspn=12.299242,23.269043&amp;t=m&amp;ie=UTF8&amp;hq=&amp;hnear=%E9%A6%99%E6%B8%AF%E7%9A%87%E5%90%8E%E5%A4%A7%E9%81%93%E6%9D%B1248%E8%99%9F&amp;ll=22.274619,114.173419&amp;spn=0.000869,0.00114&amp;z=19&amp;iwloc=A" style="color:#0000FF;text-align:left">显示详细地图</a></small>
 
-<h4>服务对象</h4>
-<p>打算飞速壮大企业的企业领导人员</p>
-
-<h4>服务承诺</h4>
-<p>
-经营家旨在集合国内影响力非凡的企业家，承诺透过一系列的专业
-培训，从而建立庞大的商业人际网络，协助会员们打造一个又一个
-兼具财富实力和企业责任的优秀中国企业，使所有会员形成一个在
-国内外都拥有举足轻重地位的商圈，实现祖国、企业、员工、客户
-四赢的目标。
-            </p>
-            </div>
-            <div id="content-frame-bottom"></div>
+                </div>
+                <h3 class="half">联络我们</h3>
+                <h4>香港皇后大道东 248 号 31 楼 07 - 08 室</h4>
+                <h4>Flat 07 - 08, 31/F, No 248 Queen's Road East, Hong Kong</h4>
+                <h4>电话: +852 2117 1010 &nbsp;&nbsp;&nbsp;&nbsp; 传真: +852 2117 1010</h4>
+                <br/><br/>
+                <h4>电邮</h4>
+                <h4><a class="email" href="mailto:info@b-pts.com">info@b-pts.com</a></h4>
+                </div>
+                <div id="content-frame-bottom"></div>
+                
             </div>
             <div id="footer"></div>
 
