--- a/app/header.html
+++ b/app/header.html
@@ -11,11 +11,12 @@
             <li><a href="instructor.html">教练</a></li>
             <li><a href="#">BP课程</a></li>
             <li><a href="#">公司简介</a></li>
-            <li><a href="#">联络我们</a></li>
+            <li><a href="contact.html">联络我们</a></li>
         </ul>
     </div>
     <div id="banner">
         <img id="instructor-banner" class="inactive" src="images/instructor-banner.png"/>
         <img id="index-banner" class="inactive" src="images/index-banner.png"/>
+        <img id="contact-banner" class="inactive" src="images/contact-banner.png"/>
     </div>
 </div>
