--- a/app/index-de.html
+++ b/app/index-de.html
@@ -22,7 +22,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-
+    <div class="container-wrapper">
         <div class="container">
             <div class="header">
                 <ul class="nav nav-pills pull-right">
@@ -61,6 +61,7 @@
                 <p>♥ from the Yeoman team</p>
             </div>
 
+        </div>
         </div>
 
 
