--- a/app/index.html
+++ b/app/index.html
@@ -24,17 +24,18 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-
+    <div class="container-wrapper">
         <div class="container">
-        <div class="pattern large"></div>
-        <div class="pattern small"></div>
+            <div class="pattern large"></div>
+            <div class="pattern small"></div>
+            
             <div id="header"></div>
             
             <div id="content-frame">
             <div id="content-frame-top"></div>
             <div id="article">
-            <h3>公司简介</h3>
-            <h4>助你凝商致富，令你经营有道，比富更贵<br/>
+            <h3 class="no-margin-top">公司简介</h3>
+            <h4 class="no-margin-top">助你凝商致富，令你经营有道，比富更贵<br/>
 MORE BUSINESS, MORE THAN BUSINESS</h4>
 
 <h4>服务对象</h4>
@@ -54,7 +55,7 @@ MORE BUSINESS, MORE THAN BUSINESS</h4>
             <div id="footer"></div>
 
         </div>
-
+    </div>
 
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
@@ -64,12 +65,14 @@ MORE BUSINESS, MORE THAN BUSINESS</h4>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-42439720-1', 'b-pts.com');
+          ga('send', 'pageview');
+
         </script>
 
         <!-- build:js scripts/main.js -->
