--- a/app/contact.html
+++ b/app/contact.html
@@ -18,6 +18,7 @@
         <!-- build:js scripts/vendor/modernizr.js -->
         <script src="bower_components/modernizr/modernizr.js"></script>
         <!-- endbuild -->
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     </head>
     <body>
         <!--[if lt IE 10]>
