--- a/app/header.html
+++ b/app/header.html
@@ -8,8 +8,24 @@
     <div id="nav" class="pull-right">
         <ul class="nav nav-pills ">
             <li><a href="index.html">首页</a></li>
-            <li><a href="instructor.html">教练</a></li>
-            <li><a href="#">BP课程</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">教练</a>
+                <ul class="dropdown-menu">
+                  <li><a href="coachProfile.html">教练概览</a></li>
+                  <li><a href="businessTrainning.html">商业训练</a></li>
+                  <li><a href="successTrainning.html">成功训练</a></li>
+                  <li><a href="timeManagement.html">时间管理</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">BP课程</a>
+                <ul class="dropdown-menu">
+                    <li><a href="instructor.html">导师简介</a></li>
+                    <li><a href="programme.html">课程简介</a></li>
+                </ul>
+
+            </li>
+            <li><a href="becomeRich.html">凝商致富</a></li>
             <li><a href="#">公司简介</a></li>
             <li><a href="contact.html">联络我们</a></li>
         </ul>
@@ -18,5 +34,11 @@
         <img id="instructor-banner" class="inactive" src="images/instructor-banner.png"/>
         <img id="index-banner" class="inactive" src="images/index-banner.png"/>
         <img id="contact-banner" class="inactive" src="images/contact-banner.png"/>
+        <img id="programme-banner" class="inactive" src="images/programme-banner.png" />
+        <img id="businessTrainning-banner" class="inactive" src="images/businessTrainning-banner.png" />
+        <img id="successTrainning-banner" class="inactive" src="images/successTrainning-banner.png" />
+        <img id="timeManagement-banner" class="inactive" src="images/timeManagement-banner.png" />
+        <img id="coachProfile-banner" class="inactive" src="images/coachProfile-banner.png" />
+        <img id="becomeRich-banner" class="inactive" src="images/becomeRich-banner.png" />
     </div>
 </div>
