--- a/app/header.html
+++ b/app/header.html
@@ -7,7 +7,7 @@
     </div>
     <div id="nav" class="pull-right">
         <ul class="nav nav-pills ">
-            <li><a href="index.html">首页</a></li>
+            <li><a href="index.html">公司简介</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">教练</a>
                 <ul class="dropdown-menu">
@@ -26,7 +26,6 @@
 
             </li>
             <li><a href="becomeRich.html">凝商致富</a></li>
-            <li><a href="#">公司简介</a></li>
             <li><a href="contact.html">联络我们</a></li>
         </ul>
     </div>
