--- a/app/instructor.html
+++ b/app/instructor.html
@@ -46,7 +46,7 @@
                         <p>陈思朗<br />Marco Chan</p>
                         </li>
 
-                        <li><a href="#jason-chiu" data-toggle="pill">
+                        <!-- <li><a href="#jason-chiu" data-toggle="pill">
                             <img src="images/jason-chiu.png"/>
                         </a>
                         <p>Jason Chiu</p>
@@ -55,7 +55,7 @@
                             <img src="images/cynthia-wu.png"/>
                         </a>
                         <p>胡露明<br />Cynthia Wu</p>
-                        </li>
+                        </li> -->
                         <li><a href="#david" data-toggle="pill">
                             <img src="images/david.png"/>
                         </a>
@@ -78,17 +78,24 @@
                     <img src="images/elsa-lim.png" />
                     <div class="man-story scroll-pane">
                         <h3>林希桦 Elsa Lim</h3>
-                        <p>行政总裁</p>
 <p>
-是一位有着20年从商经验的女企业家，成立的公司为日本上市企业的香港总代理， 服务的客户有香港医院
-管理局的多家医院机构，亦有私家医院。十年前的机缘接触到了个人成长课程，在完成了整个课程后, 从未
-间断的透过她的能力和知识在课程中担任教练，直到成为课程的总教练。在这十年期间，她带领及指导了
-超过10000人，成就了许多人达成梦想和目标。</p>
+擁有超過十年的總教練經驗，能迅速令企業增長百分之三十到超過一百三十的企業治療大師。</p>
 <p>
-当中有从事保险业的同学，在三个半月的课程期间，于心态
-上丶感染力上和沟通上有所突破，而在保险业中获得COT(Court of the Table)的业绩，赚得2百万佣金。</p>
+本身亦為日本上市企業香港分部的代表人，同時擁有二十年從商經驗的女企業家，曾協助治療過千企業，指導了超過一萬人，由兩三人的公司至十到十二人的中小企、以及一些擁有三十至一百人以上的較大型企業，也由她親身授予專業教練培訓技能。被她所訓練的課程畢業者眾，大多以上市公司主席及香港其他同類型的企業培訓教練的人為主。</p>
 <p>
-另外也有从商的同学, 在课程期间于事业上赚取百万利润。她指导过的高层或领导人包括: 电脑Ｉ.T.公司, 零售, 中药材贸易, 物流, 机器销售, 中医师, 美容等各行各业的人才。</p>
+她是世界第一激勵大師安東尼羅賓的徒弟，對於教練的過程有世界級的視野，能給予企業員工以至管理層最百份百的潜能激發，直接令企業取得寶貴的團隊機動力，幫助企業生產能力於短時間內爆發提昇。</p>
+<p>
+關於安東尼羅賓，他曾輔導過多位皇室的家庭成員，被美國前總統柯林頓、黛安娜王妃聘為個人顧問；曾為眾多世界名人提供咨詢，包括南非總統曼徳拉、前蘇聯總統戈爾巴喬夫、世界網球冠軍安德烈·阿加西等。</p>
+<p>
+BP International 的所有教練，均擁有現時國內最火熱的 ICF 專業教練認證課程，ICF 專業教練認證課程被喻為全球所有在華教練資質認定機構中，佔有最主要的地位，是專業教練認證之路中公認為最權威的一個。
+而在 IFC 的意義中，「教練」是人生最重要的導師之一，他是每個人的窗戶，打開後能激發個人最大的潛能，創造最卓越的人生。</p>
+<p>
+關於「教練」，他們就是要發現及助你實踐你最想擁有的成就，鼓勵多作自我審查，引發自身解決問題的能力及策略，改善現實與你所理想的成就差距，提昇生活及精神品質，在職場上創造出令人驚訝的滿意結果。</p>
+<p>
+「教練」是透過對話、聆聽及觀察與閣下共同設計合作方式，像運動員教練般，有系統地使閣下成為最豐盛的人生典範。</p>
+<p>
+最後不論你是中國其他城市的教練或學生，BP Internation也能協助你順利取得 ICF 認證 。</p>
+
                     </div>
                   </div>
                   <div class="tab-pane" id="marco-chan">
@@ -129,7 +136,7 @@ Metek Industrial Co. Ltd<br/>
                         
                     </div>
                   </div>
-                  <div class="tab-pane" id="jason-chiu">
+                  <!-- <div class="tab-pane" id="jason-chiu">
                     <img src="images/jason-chiu.png" />
                     <div class="man-story scroll-pane">
                         <h3>Jason Chiu</h3>
@@ -175,7 +182,7 @@ Cynthia的成就榜
 2010年共同著作”美丽蜜儿”一书
                         </p>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="tab-pane" id="david">
                     <img src="images/david.png" />
                     <div class="man-story scroll-pane">
@@ -237,7 +244,7 @@ AIESEC International 国际经济学商学学生会</p>
                     <img src="images/john-henley.png" />
                     <div class="man-story scroll-pane">
                     
-                        <h3>David Gilcrease</h3>
+                        <h3>John Henley</h3>
                         <p>
 John是一位具超过二十年经验的企业教练、顾问与导师，在美洲、墨西哥、欧洲、俄罗斯与中国等培训过逾三万人。他亦提供专业教练指引给各行各业的专家，包含美术家、小说家、大学教授、与中小型企业老板。</p>
 <p>
