--- a/app/header.html
+++ b/app/header.html
@@ -30,8 +30,28 @@
         </ul>
     </div>
     <div id="banner">
-        <img id="instructor-banner" class="inactive" src="images/instructor-banner.png"/>
-        <img id="index-banner" class="inactive" src="images/index-banner.png"/>
+
+        <img id="instructor-banner" class="inactive" src="images/instructor-banner.png"  style="display:none;"/>
+        <img class="inactive" src="images/b1.png"  style="display:none;" id="b1"/>
+        <img class="inactive" src="images/b2.png"  style="display:none;" id="b2"/>
+        <img class="inactive" src="images/b3.png" id="b3" style="display:none;"/>
+        <img class="inactive" src="images/b4.png" id="b4" style="display:none;"/>
+        <img class="inactive" src="images/b5.png" id="b5" style="display:none;"/>
+        <img class="inactive" src="images/b6.png" id="b6" style="display:none;"/>
+        <img class="inactive" src="images/b7.png" id="b7" style="display:none;"/>
+        <img class="inactive" src="images/b8.png" id="b8" style="display:none;"/>
+        <img class="inactive" src="images/b9.png" id="b9" style="display:none;"/>
+        <img class="inactive" src="images/b10.png" id="b10" style="display:none;"/>
+        <img class="inactive" src="images/b11.png" id="b11" style="display:none;"/>
+        <img class="inactive" src="images/b12.png" id="b12" style="display:none;"/>
+        <img class="inactive" src="images/b13.png" id="b13" style="display:none;"/>
+        <img class="inactive" src="images/b14.png" id="b14" style="display:none;"/>
+        <img class="inactive" src="images/b15.png" id="b15" style="display:none;"/>
+        <img class="inactive" src="images/b16.png" id="b16" style="display:none;"/>
+        <img class="inactive" src="images/b17.png" id="b17" style="display:none;"/>
+        <img class="inactive" src="images/b18.png" id="b18" style="display:none;"/>
+
+        <!-- <img id="index-banner" class="inactive" src="images/index-banner.png"/>
         <img id="contact-banner" class="inactive" src="images/contact-banner.png"/>
         <img id="programme-banner" class="inactive" src="images/programme-banner.png" />
         <img id="businessTrainning-banner" class="inactive" src="images/businessTrainning-banner.png" />
@@ -39,5 +59,6 @@
         <img id="timeManagement-banner" class="inactive" src="images/timeManagement-banner.png" />
         <img id="coachProfile-banner" class="inactive" src="images/coachProfile-banner.png" />
         <img id="becomeRich-banner" class="inactive" src="images/becomeRich-banner.png" />
+     -->
     </div>
 </div>
