--- a/app/header.html
+++ b/app/header.html
@@ -32,24 +32,19 @@
     <div id="banner">
 
         <img id="instructor-banner" class="inactive" src="images/instructor-banner.png"  style="display:none;"/>
-        <img class="inactive" src="images/b1.jpg"  style="display:none;" id="b1"/>
-        <img class="inactive" src="images/b2.jpg"  style="display:none;" id="b2"/>
-        <img class="inactive" src="images/b3.jpg" id="b3" style="display:none;"/>
-        <img class="inactive" src="images/b4.jpg" id="b4" style="display:none;"/>
-        <img class="inactive" src="images/b5.jpg" id="b5" style="display:none;"/>
-        <img class="inactive" src="images/b6.jpg" id="b6" style="display:none;"/>
-        <img class="inactive" src="images/b7.jpg" id="b7" style="display:none;"/>
-        <img class="inactive" src="images/b8.jpg" id="b8" style="display:none;"/>
-        <img class="inactive" src="images/b9.jpg" id="b9" style="display:none;"/>
-        <img class="inactive" src="images/b10.jpg" id="b10" style="display:none;"/>
-        <img class="inactive" src="images/b11.jpg" id="b11" style="display:none;"/>
-        <img class="inactive" src="images/b12.jpg" id="b12" style="display:none;"/>
-        <img class="inactive" src="images/b13.jpg" id="b13" style="display:none;"/>
-        <img class="inactive" src="images/b14.jpg" id="b14" style="display:none;"/>
-        <img class="inactive" src="images/b15.jpg" id="b15" style="display:none;"/>
-        <img class="inactive" src="images/b16.jpg" id="b16" style="display:none;"/>
-        <img class="inactive" src="images/b17.jpg" id="b17" style="display:none;"/>
-        <img class="inactive" src="images/b18.jpg" id="b18" style="display:none;"/>
+        <img class="inactive" src="images/b1.png"  style="display:none;" id="b1"/>
+        <img class="inactive" src="images/b2.png"  style="display:none;" id="b2"/>
+        <img class="inactive" src="images/b3.png" id="b3" style="display:none;"/>
+        <img class="inactive" src="images/b4.png" id="b4" style="display:none;"/>
+        <img class="inactive" src="images/b5.png" id="b5" style="display:none;"/>
+        <img class="inactive" src="images/b6.png" id="b6" style="display:none;"/>
+        <img class="inactive" src="images/b7.png" id="b7" style="display:none;"/>
+        <img class="inactive" src="images/b8.png" id="b8" style="display:none;"/>
+        <img class="inactive" src="images/b9.png" id="b9" style="display:none;"/>
+        <img class="inactive" src="images/b10.png" id="b10" style="display:none;"/>
+        <img class="inactive" src="images/b11.png" id="b11" style="display:none;"/>
+        <img class="inactive" src="images/b12.png" id="b12" style="display:none;"/>
+        
 
     </div>
 </div>
