--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,10 @@
             <div id="content-frame">
             <div id="content-frame-top"></div>
             <div id="article">
-            <h3 class="no-margin-top">公司简介</h3>
+            <div class="image-wrap">
+                <img src="../images/fakeVedio.png" />
+            </div>
+            <h3 class="vedio-half no-margin-top">公司简介</h3>
             <h4 class="no-margin-top">助你凝商致富，令你经营有道，比富更贵<br/>
 MORE BUSINESS, MORE THAN BUSINESS</h4>
 
